fix(infra): restore vendor JVM flag set — drop the empty /conf mount, pin CYPHER_5
The neo4j image's entrypoint wipes $NEO4J_HOME/conf/* whenever /conf is
mounted. SKUEL mounted an EMPTY infrastructure/neo4j/conf/, so every boot
erased the vendor neo4j.conf — including ~22 recommended
server.jvm.additional flags (explicit G1GC, AlwaysPreTouch,
--enable-native-access=ALL-UNNAMED, --add-opens, netty tuning, and the
Lucene-vectorization sysprop the HNSW vector indexes want on JDK 25).
Visible symptom: "restricted method ... native access" boot warnings.

- infrastructure/docker-compose.yml: drop the /conf mount (config is 100%
  NEO4J_* env vars); NOTE comment prevents innocent re-adding. The
  NEO4J_server_jvm_additional env var is append-not-replace, so our
  Vector API flag now APPENDS to the vendor set instead of standing alone.
- CYPHER_5 pinned explicitly (compose + k8s manifest + prod/DO templates):
  the vendor conf pins db.query.default_language=CYPHER_25 for new
  installs, while SKUEL's query corpus runs CYPHER_5 (verified live) — a
  CYPHER_25 migration must be its own arc, never a config side effect.
- DO_MIGRATION_GUIDE template: same conf-mount fix + adds the Vector API
  flag it was missing since #575 (template mirrors dev compose).
- NEO4J_SERVER_TUNING.md updated to the restored-state mechanism;
  infra README/.gitignore: 6 mounts -> 5; empty conf/ dir removed.

Verified on the recreated dev container: 27 live JVM args (22 vendor +
--add-modules jdk.incubator.vector + heap), zero restricted-method and
zero vector-incubator warnings, db.query.default_language=CYPHER_5,
env settings still land (tx timeout 10m, allowlist apoc.meta.*,
pagecache 2GiB), 4427 nodes intact, vector index queries return hits,
apoc.meta.* working.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>