@@ -23,19 +23,23 @@ driver side, see [NEO4J_QUERY_TIMEOUT.md](NEO4J_QUERY_TIMEOUT.md) / ADR-064.
 | Cypher planner | `dbms_cypher_planner` | `COST` | Cost-based optimization |
 | Slow-query log | `db_logs_query_enabled` / `_threshold` | `INFO` / `1s` | Logs queries > 1s with parameters |
 | APOC allowlist | `dbms_security_procedures_allowlist` | `apoc.meta.*` | Meta procedures only (SKUEL001 — domain services use pure Cypher) |
-| **JVM extra args** | **`server_jvm_additional`** | **`--add-modules jdk.incubator.vector`** | **Vector API — see below** |
+| **JVM extra args** | **`server_jvm_additional`** | **`--add-modules jdk.incubator.vector`** | **Vector API — see below (APPENDS to ~22 vendor flags)** |
+| Cypher language | `db_query_default__language` | `CYPHER_5` | Vendor conf pins CYPHER_25 for new installs; SKUEL pins CYPHER_5 until a deliberate migration |
 
-The image's bundled `neo4j.conf` DOES ship ~22 default `server.jvm.additional` lines (verified on
-`2026.05.0` and `2026.06.0`: explicit G1GC, `-XX:+AlwaysPreTouch`, `--add-opens`, netty/Lucene
-flags) — but none of them reach the live JVM here. Compose mounts the (empty)
-`infrastructure/neo4j/conf/` at `/conf`, and the entrypoint wipes `$NEO4J_HOME/conf/*` and copies
-the mount's contents in whenever `/conf` is mounted — so the server runs on built-in defaults plus
-env-var settings only. The env var itself is append-not-replace (`_append_not_replace_configs` in
-`/startup/docker-entrypoint.sh`), so it wouldn't clobber those defaults even if they survived the
-mount. Live JVM observed on `2026.06.0`: `--add-modules=jdk.incubator.vector` + `-Xms`/`-Xmx`, no
-GC flags (modern JDK defaults to G1GC implicitly). Restoring the vendor flag set would mean
-dropping the empty `/conf` mount (or populating it via the image's `dump-config`) — a deliberate
-tuning decision, not part of a routine version bump.
+The image's bundled `neo4j.conf` ships ~22 vendor-recommended `server.jvm.additional` lines
+(verified on `2026.05.0`/`2026.06.0`: explicit G1GC, `-XX:+AlwaysPreTouch`,
+`--enable-native-access=ALL-UNNAMED`, `--add-opens`, netty and Lucene-vectorization flags), and
+SKUEL runs with all of them: compose deliberately does **not** mount `/conf`, because the
+entrypoint wipes `$NEO4J_HOME/conf/*` whenever `/conf` is mounted (an empty `/conf` mount used to
+erase the whole vendor flag set on every boot — restored 2026-07-20; symptoms while erased:
+"restricted method ... native access" boot warnings, no `AlwaysPreTouch`, Lucene vectorization
+sysprop missing). `NEO4J_server_jvm_additional` is append-not-replace
+(`_append_not_replace_configs` in `/startup/docker-entrypoint.sh`), so our Vector API flag
+APPENDS: live JVM = 22 vendor flags + `--add-modules jdk.incubator.vector` + `-Xms`/`-Xmx`. One
+vendor-conf setting is deliberately overridden: the vendor pins
+`db.query.default_language=CYPHER_25` for new installs, while SKUEL's query corpus runs CYPHER_5 —
+pinned explicitly in compose and the k8s manifest so a CYPHER_25 migration happens as its own
+deliberate arc, never as a config side effect.
 
 ## Vector API (SIMD) — why it is enabled
 
